correccion incidencia de ingreso y actualizacion de dotacion

--- a/Capex.Web/Capex.Web/Capex.Web.csproj
+++ b/Capex.Web/Capex.Web/Capex.Web.csproj
@@ -2230,6 +2230,7 @@
     <Content Include="Views\Mantenedor\Bloqueo.cshtml" />
     <Content Include="Views\Orientacion\Index.cshtml" />
     <Content Include="Views\Orientacion\ListarIniciativas.cshtml" />
+    <Content Include="Views\Planificacion\ModificarDotacion.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Export\" />
